<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.android.janhackathon.Account.LoginActivity">

<LinearLayout
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/logo"
        android:src="@drawable/jan_logo"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:id="@+id/inputEmail"
            android:inputType="textEmailAddress|phone"
            android:hint="Email or Phone Number"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <!--<EditText-->
    <!--android:paddingStart="5dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/inputEmail"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:hint="@string/Email"/>-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:id="@+id/input_password"
            android:hint="@string/password"
            android:textColorHint="@color/DarkGrey"
            android:layout_marginTop="15dp"
            />
    </android.support.design.widget.TextInputLayout>
    <!--<EditText-->
    <!--android:inputType="textPassword"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/input_password"-->
    <!--android:hint="@string/password"-->
    <!--android:layout_marginTop="15dp"-->
    <!--/>-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/login"
        android:background="@drawable/white_onclick_grey"/>

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have an accont?"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="16sp"
        android:id="@+id/link_register"
        android:textColor="@color/lightTeal"
        />

    <!--<TextView-->
    <!--android:layout_margin="6dp"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="I put the share button below so that i can send you the app easily"/>-->
    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/share_fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:fabSize="normal"-->
    <!--app:rippleColor="@color/White"-->
    <!--app:srcCompat="?attr/actionModeShareDrawable" />-->

</LinearLayout>

<ProgressBar
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_centerInParent="true"
    android:id="@+id/progressBar"/>

</RelativeLayout>
