<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.android.janhackathon.Account.RegisterActivity">

<LinearLayout
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/lightTeal"
        android:gravity="center_horizontal"
        />


    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:hint="@string/Email"-->
    <!--android:id="@+id/input_email_register_activity"-->
    <!--android:layout_marginTop="15dp"/>-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/veryLightTeal"
            android:hint="@string/enter_your_full_name"
            android:id="@+id/input_name"
            android:layout_marginTop="15dp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColorHint="@color/veryLightTeal"
            android:hint="Enter your phone number"
            android:id="@+id/input_phone_number_register_activity"
            android:layout_marginTop="15dp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="email (Optional)"
            android:textColorHint="@color/veryLightTeal"
            android:id="@+id/input_email_register_activity"
            android:layout_marginTop="15dp"/>
    </android.support.design.widget.TextInputLayout>

    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="text"-->
    <!--android:hint="@string/enter_your_full_name"-->
    <!--android:id="@+id/input_name"-->
    <!--android:layout_marginTop="15dp"-->
    <!--/>-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/input_password_register_activity"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/veryLightTeal"
            android:hint="Password"
            />
    </android.support.design.widget.TextInputLayout>

    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textPassword"-->
    <!--android:id="@+id/input_password_register_activity"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:hint="@string/password"/>-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/veryLightTeal"
            android:hint="Confirm Password"
            android:layout_marginTop="15dp"
            />
    </android.support.design.widget.TextInputLayout>
    <!--<EditText-->
    <!--android:id="@+id/confirm_password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textPassword"-->
    <!--android:hint="@string/confirm_password"-->
    <!--android:layout_marginTop="15dp"-->
    <!--/>-->
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/btn_register"
        android:padding="12dp"
        android:text="@string/register"
        android:background="@drawable/white_onclick_grey"
        />
</LinearLayout>

<ProgressBar
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/progressBar"
    android:layout_centerInParent="true"/>
</RelativeLayout>